--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:backgroundTint="@color/colorAccent"
-        android:textAlignment="center"
+        app:borderWidth="6dp"
         app:srcCompat="@drawable/ic_fab_add"
         android:layout_margin="16dp"/>
 
