--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.arainko.nawts.view.MainFragment"
+        android:name="com.arainko.nawts.fragments.MainFragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_main" >
         <action
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/noteEditFragment"
-        android:name="com.arainko.nawts.view.NoteEditFragment"
+        android:name="com.arainko.nawts.fragments.NoteEditFragment"
         android:label="fragment_note_edit"
         tools:layout="@layout/fragment_note_edit" >
         <action
