added extensions and CustomizationFragment

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -12,13 +12,16 @@
         tools:layout="@layout/fragment_main" >
         <action
             android:id="@+id/action_mainFragment_to_noteEditFragment"
-            app:destination="@id/noteEditFragment"
+            app:destination="@id/editingFragment"
             app:enterAnim="@anim/fragment_open_enter"
             app:popUpTo="@+id/mainFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_customizationFragment"
+            app:destination="@id/customizationFragment" />
     </fragment>
 
     <fragment
-        android:id="@+id/noteEditFragment"
+        android:id="@+id/editingFragment"
         android:name="com.arainko.nawts.fragments.NoteEditFragment"
         android:label="fragment_note_edit"
         tools:layout="@layout/fragment_note_edit" >
@@ -37,5 +40,10 @@
             app:argType="integer"
             android:defaultValue="-1" />
     </fragment>
+    <fragment
+        android:id="@+id/customizationFragment"
+        android:name="com.arainko.nawts.CustomizationFragment"
+        android:label="fragment_customization"
+        tools:layout="@layout/fragment_customization" />
 
 </navigation>
