--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorContentBackground"
+    android:background="@color/colorSurface"
     tools:context=".fragments.EditFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
