--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,8 +15,7 @@
         app:borderWidth="6dp"
         app:srcCompat="@drawable/ic_fab_add"
         app:layout_anchor="@id/bottom_app_bar"
-        android:layout_margin="16dp"
-        app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior"/>
+        android:layout_margin="16dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
