--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -17,20 +17,13 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
-        <action
-            android:id="@+id/action_mainFragment_to_customizationFragment"
-            app:destination="@id/customizationFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
 
     <fragment
         android:id="@+id/editingFragment"
         android:name="com.arainko.nawts.fragments.EditFragment"
         android:label="fragment_note_edit"
-        tools:layout="@layout/fragment_note_edit">
+        tools:layout="@layout/fragment_edit">
         <action
             android:id="@+id/action_noteEditFragment_to_mainFragment"
             app:destination="@id/mainFragment"
@@ -54,5 +47,19 @@
         android:name="com.arainko.nawts.fragments.CustomizationFragment"
         android:label="fragment_customization"
         tools:layout="@layout/fragment_customization" />
+    <action
+        android:id="@+id/action_global_customizationFragment"
+        app:destination="@id/customizationFragment"
+        app:enterAnim="@anim/nav_default_enter_anim"
+        app:exitAnim="@anim/nav_default_exit_anim"
+        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+        app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    <action
+        android:id="@+id/action_global_mainFragment"
+        app:destination="@id/mainFragment"
+        app:enterAnim="@anim/nav_default_enter_anim"
+        app:exitAnim="@anim/nav_default_exit_anim"
+        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+        app:popExitAnim="@anim/nav_default_pop_exit_anim" />
 
 </navigation>
