--- a/app/src/main/res/layout/fragment_customization.xml
+++ b/app/src/main/res/layout/fragment_customization.xml
@@ -19,22 +19,8 @@
     <!--        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"-->
     <!--        app:behavior_hideable="true" />-->
 
-    <LinearLayout
-        android:id="@+id/bottomSheet"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorAccent"
-        android:orientation="vertical"
-        app:behavior_hideable="true"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:text="TEST" />
-
-    </LinearLayout>
+   <include layout="@layout/bottom_sheet_customization"
+       android:id="@+id/bottomSheet" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
