--- a/app/src/main/res/layout/fragment_customization.xml
+++ b/app/src/main/res/layout/fragment_customization.xml
@@ -20,7 +20,7 @@
     <!--        app:behavior_hideable="true" />-->
 
    <include layout="@layout/bottom_sheet_customization"
-       android:id="@+id/bottomSheet" />
+       android:id="@+id/bottomSheet1" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
