--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -23,4 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <include layout="@layout/bottom_sheet_customization"
+        android:id="@+id/bottomSheet" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
