--- a/app/src/main/res/layout/bottom_sheet_customization.xml
+++ b/app/src/main/res/layout/bottom_sheet_customization.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
-    app:behavior_hideable="true"
-    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" >
+    android:background="@color/colorAccent" >
 
     <HorizontalScrollView
         android:id="@+id/scrollView"
