changed persistent BottomSheet to a DialogBottomSheet cleaned-up HomeFragmentBehavior code fixed color changing of specific notes

--- a/app/src/main/res/layout/bottom_sheet_customization.xml
+++ b/app/src/main/res/layout/bottom_sheet_customization.xml
@@ -5,6 +5,9 @@
     android:layout_height="match_parent"
     android:background="@color/colorAccent" >
 
+    <include layout="@layout/note_layout"
+        android:id="@+id/cardPreview" />
+
     <HorizontalScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
