--- a/app/src/main/res/layout/color_button_layout.xml
+++ b/app/src/main/res/layout/color_button_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.button.MaterialButton xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/Widget.MaterialComponents.Button"
+    style="@style/Widget.MaterialComponents.Button.Icon"
     android:layout_width="72dp"
     android:layout_height="72dp"
     android:layout_margin="6dp"
@@ -9,5 +9,7 @@
     android:insetTop="0dp"
     android:insetRight="0dp"
     android:insetBottom="0dp"
-    app:iconPadding="0dp"
+    app:iconPadding="10dp"
+    app:strokeColor="#494949"
+    app:strokeWidth="0dp"
     app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />
