fixed a bug that caused the app to crash on configuration change when the user was customizing its notes

--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -2,6 +2,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/editFragmentRootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorSurface"
@@ -48,18 +49,6 @@
             app:layout_constraintTop_toBottomOf="@+id/headerField"
             android:importantForAutofill="no" />
 
-<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--            android:id="@+id/notfab"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="bottom|end"-->
-<!--            android:layout_margin="16dp"-->
-<!--            android:backgroundTint="@color/colorAccent"-->
-<!--            app:borderWidth="0dp"-->
-<!--            app:layout_constraintBottom_toBottomOf="@+id/contentField"-->
-<!--            app:layout_constraintEnd_toEndOf="@+id/contentField"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/headerField" />-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
