--- a/app/src/main/res/layout/bottom_sheet_customization_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_customization_layout.xml
@@ -11,16 +11,18 @@
     <HorizontalScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content" >
 
-        <LinearLayout
-            android:id="@+id/scrollContainer"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
+        <TableLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" />
+            android:layout_height="wrap_content" >
 
+            <TableRow
+                android:id="@+id/scrollContainerVibrant" />
+            <TableRow
+                android:id="@+id/scrollContainerPastel" />
+
+        </TableLayout>
     </HorizontalScrollView>
 
 </LinearLayout>
