--- a/app/src/main/res/values/customization-colors-vibrant.xml
+++ b/app/src/main/res/values/customization-colors-vibrant.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="colors">
-        <item>#ffffff</item>
+    <string-array name="vibrant_colors">
+        <item>#9e9e9e</item>
         <item>#ff5252</item>
         <item>#ff4081</item>
         <item>#e040fb</item>
