--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -23,6 +23,9 @@
         <argument
             android:name="note"
             app:argType="com.arainko.nawts.persistence.entities.Note" />
+        <argument
+            android:name="itemCount"
+            app:argType="integer" />
     </fragment>
     <action
         android:id="@+id/action_global_mainFragment"
