--- a/app/src/main/res/layout/bottom_sheet_customization_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_customization_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorAccent" >
 
-    <include layout="@layout/note_preview_layout"
+    <include layout="@layout/note_layout"
         android:id="@+id/cardPreview" />
 
     <HorizontalScrollView
