--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -9,9 +9,10 @@
     tools:context=".view.containters.EditFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/headerField"
@@ -23,31 +24,43 @@
             android:background="@android:color/transparent"
             android:ems="10"
             android:hint="Header..."
+            android:importantForAutofill="no"
             android:inputType="text"
             android:textSize="28sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:importantForAutofill="no" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/contentField"
-            android:layout_width="match_parent"
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
-            android:background="@android:color/transparent"
-            android:ems="10"
-            android:gravity="start|top"
-            android:inputType="textMultiLine"
-            android:hint="Text..."
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/headerField"
-            android:importantForAutofill="no" />
+            app:layout_constraintTop_toBottomOf="@+id/headerField">
+
+            <EditText
+                android:id="@+id/contentField"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
+                android:background="@android:color/transparent"
+                android:ems="10"
+                android:gravity="start|top"
+                android:hint="Text..."
+                android:importantForAutofill="no"
+                android:inputType="textMultiLine"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/headerField" />
+
+        </androidx.core.widget.NestedScrollView>
+
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -56,10 +69,21 @@
         android:id="@+id/fabSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
         android:backgroundTint="@color/colorAccent"
         app:borderWidth="0dp"
-        app:srcCompat="@drawable/ic_fab_save"
-        android:layout_margin="16dp"/>
+        app:layout_anchor="@id/bottomAppBar"
+        app:srcCompat="@drawable/ic_fab_save" />
+
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottomAppBar"
+        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:menu="@menu/bottom_bar_menu"
+        app:fabAlignmentMode="end"
+        app:layout_anchor="@+id/constraintLayout"
+        app:layout_anchorGravity="bottom|center"
+        app:hideOnScroll="true"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
