added SharedElementTransition for fab onLick

--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorSurface"
+    android:transitionName="note_transition_container"
     tools:context=".view.containters.EditFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
