added SharedElementTransition for ViewHolders

--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/editFragmentRootLayout"
+    android:transitionName="transitionName"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorSurface"
-    android:transitionName="note_transition_container"
     tools:context=".view.containters.EditFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
