--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.arainko.nawts.view.containters.HomeFragment"
+        android:name="com.arainko.nawts.view.containters.homeFragment.HomeFragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_home" >
         <action
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/editingFragment"
-        android:name="com.arainko.nawts.view.containters.EditFragment"
+        android:name="com.arainko.nawts.view.containters.editFragment.EditFragment"
         android:label="fragment_note_edit"
         tools:layout="@layout/fragment_edit">
         <argument
@@ -26,6 +26,9 @@
         <argument
             android:name="itemCount"
             app:argType="integer" />
+        <argument
+            android:name="transitionName"
+            app:argType="string" />
     </fragment>
     <action
         android:id="@+id/action_global_mainFragment"
