--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:borderWidth="0dp"
-        app:srcCompat="@drawable/ic_fab_add"
+        android:backgroundTint="@color/colorAccent"
+        app:tint="@android:color/white"
+        android:src="@drawable/ic_fab_add"
         android:layout_margin="16dp"
         android:layout_gravity="bottom|end"/>
 
