--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#8c9eff</color>
-    <color name="colorPrimaryDark">#5870cb</color>
-    <color name="colorAccent">#5067e6</color>
+    <color name="colorPrimary">#8e8e8e</color>
+    <color name="colorPrimaryDark">#373737</color>
+    <color name="colorAccent">#616161</color>
     <color name="colorSurface">#e8eaf6</color>
 </resources>
